# Easm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  README_CN.md
cmake_utils/: auto_target_enable_utf8.cmake  setup_project_compile_options.cmake
easm/: CMakeLists.txt  easm.cpp  easm.h
easm-testing/: CMakeLists.txt  main.cpp
easm/base/: base.h  type.h  version.h
easm/core/: baseassembler.cpp  baseassembler.h  baseemitter.cpp  baseemitter.h  codebuffer.cpp  codebuffer.h  codepack.cpp  codepack.h
easm/internal/memory/: virtmem.cpp  virtmem.h  zone.cpp  zone.h
easm/internal/support/: api-build_p.h  api-config.h
